--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <meta property="og:title" content="Artisan Coffee Co. - Premium Coffee Beans & Brew Equipment" />
     <meta property="og:description" content="Discover exceptional coffee beans, brewing equipment, and artisan coffee products." />
     <meta property="og:type" content="website" />
+
+    <link rel="icon" type="image/x-icon" href="/logo.ico">
+    <link rel="apple-touch-icon" href="/logo.ico">
   
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@artisancoffeeco" />
